--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "Java",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/java:1-8-bullseye",
+	"image": "mcr.microsoft.com/devcontainers/java:1-21-bookworm",
 
 	"features": {
 		"ghcr.io/devcontainers/features/java:1": {
